Feat: created ui library

--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,12 @@
     "frontend-e2e": {
       "tags": [],
       "implicitDependencies": ["frontend"]
+    },
+    "doctors-room-angular-patients": {
+      "tags": []
+    },
+    "ui": {
+      "tags": []
     }
   }
 }
